--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>Ryan's portfollo</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to fix the import problem</noscript>
     <div class = 'Body' >
       <div id="root"></div>
     </div>
