--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     
-    <title>Ryan's portfollo</title>
+    <title>Ryan's Portfollo</title>
   </head>
   <body>
     <noscript>You need to fix the import problem</noscript>
